--- a/backend/package.json
+++ b/backend/package.json
@@ -4,14 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@sequelize/postgres": "^7.0.0-alpha.43",
+    "bcryptjs": "^2.4.3",
     "express": "^4.21.1",
+    "jsonwebtoken": "^9.0.2",
     "pg-hstore": "^2.3.4"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.7"
   }
 }
