--- a/backend/package.json
+++ b/backend/package.json
@@ -1,23 +1,34 @@
 {
-  "name": "backend",
+  "name": "apinodejs",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon index.js",
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "lint": "eslint"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "@sequelize/postgres": "^7.0.0-alpha.43",
-    "bcryptjs": "^2.4.3",
-    "express": "^4.21.1",
-    "jsonwebtoken": "^9.0.2",
-    "pg-hstore": "^2.3.4"
-  },
   "devDependencies": {
-    "nodemon": "^3.1.7"
+    "@faker-js/faker": "^7.6.0",
+    "eslint": "^8.33.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "nodemon": "^2.0.20",
+    "prettier": "^2.8.3"
+  },
+  "dependencies": {
+    "@hapi/boom": "^10.0.1",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "is-even": "^1.0.0",
+    "is-odd": "^3.0.1",
+    "joi": "^17.8.4",
+    "morgan": "^1.10.0",
+    "pg": "^8.9.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.29.0"
   }
 }
